<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/movie_backdrop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/movie_backdrop_description"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/movie_backdrop_shade"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/backdrop_shade_description"
            android:scaleType="fitXY"
            android:src="@drawable/black_shade"
            app:layout_constraintBottom_toBottomOf="@+id/movie_backdrop"
            app:layout_constraintEnd_toEndOf="@+id/movie_backdrop"
            app:layout_constraintStart_toStartOf="@+id/movie_backdrop"
            app:layout_constraintTop_toTopOf="@+id/movie_backdrop" />

        <ImageView
            android:id="@+id/share_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/share_button_description"
            android:src="@drawable/share_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/movie_tagline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:ellipsize="end"
            android:maxLines="5"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/movie_backdrop_shade"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Movie Tagline" />

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/movie_tagline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Movie Title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintTop_toBottomOf="@+id/movie_backdrop">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/movie_details_constraint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/rating_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rating"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RatingBar
                    android:id="@+id/movie_rating_bar"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:progressTint="@color/yellow"
                    android:progressTintMode="src_atop"
                    android:secondaryProgressTint="@color/yellow"
                    android:secondaryProgressTintMode="src_atop"
                    android:stepSize="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rating_title" />

                <TextView
                    android:id="@+id/movie_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/movie_rating_bar"
                    tools:text="4.6/10" />

                <TextView
                    android:id="@+id/movie_votes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/movie_rating"
                    tools:text="119 votes" />

                <TextView
                    android:id="@+id/length_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:text="@string/length"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@id/movie_rating_bar"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/movie_length"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintStart_toStartOf="@id/length_title"
                    app:layout_constraintTop_toBottomOf="@id/length_title"
                    tools:text="1h 38m" />

                <TextView
                    android:id="@+id/adult_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/adult"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@id/length_title"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/movie_adult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintStart_toStartOf="@id/adult_title"
                    app:layout_constraintTop_toBottomOf="@id/adult_title"
                    tools:text="No" />

                <TextView
                    android:id="@+id/release_date_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/release_date"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/length_title"
                    app:layout_constraintTop_toBottomOf="@id/movie_length" />

                <TextView
                    android:id="@+id/movie_release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintStart_toStartOf="@id/release_date_title"
                    app:layout_constraintTop_toBottomOf="@id/release_date_title"
                    tools:text="1h 38m" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/genres_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/genres"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movie_genres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                tools:text="Action, Crime, Thriller" />

            <TextView
                android:id="@+id/overview_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/overview"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movie_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                tools:text="Arthur Bishop thought he had put his murderous past behind him when his most formidable foe kidnaps the love of his life. Now he is forced to travel the globe to complete three impossible assassinations, and do what he does best, make them look like accidents." />

            <TextView
                android:id="@+id/languages_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/languages"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movie_languages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                tools:text="Bulgarian, English" />

            <TextView
                android:id="@+id/reviews_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="15dp"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/no_reviews_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_reviews_text" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/review_list_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="350dp"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>